--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ityped": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image-filter": "^0.1.2",
     "react-scripts": "4.0.3",
     "react-social-icons": "^5.6.1",
     "react-sticky-header": "^0.2.0",
