--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ityped": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-image-filter": "^0.1.2",
     "react-scripts": "4.0.3",
     "react-social-icons": "^5.6.1",
