--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "babel-runtime": "^6.26.0",
     "gh-pages": "^3.2.3",
     "ityped": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-image-filter": "^0.1.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-social-icons": "^5.6.1",
     "react-sticky-header": "^0.2.0",
     "styled-components": "^5.3.1",
